--- a/.github/workflows/deploy-nginx.yml
+++ b/.github/workflows/deploy-nginx.yml
@@ -14,45 +14,65 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, kubernetes, dev-deployment]
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Kubernetes tools
-        uses: azure/setup-kubectl@v3
-        with:
-          version: 'v1.29.6'
-
-      - name: Set up Helm
-        uses: azure/setup-helm@v3
-        with:
-          version: 'v3.17.0'
-
-      - name: Configure kubeconfig
-        env:
-          KUBECONFIG_DATA: ${{ secrets.KUBECONFIG_DATA }}
+      - name: Setup kubeconfig for runner
         run: |
-          mkdir -p $HOME/.kube
-          echo "$KUBECONFIG_DATA" | base64 --decode > $HOME/.kube/config
+          # Setup kubeconfig using the script provided in runner
+          if [ -f /opt/scripts/setup-kubeconfig.sh ]; then
+            bash /opt/scripts/setup-kubeconfig.sh
+          else
+            echo "Using existing kubeconfig from service account"
+          fi
 
-      - name: Generate Helm template
+      - name: Generate Helm template and deploy
         run: |
           # Użyj podanego pipelineID lub automatycznie github.run_id
           PIPELINE_ID="${{ github.event.inputs.pipelineID }}"
           if [ -z "$PIPELINE_ID" ]; then
             PIPELINE_ID="${{ github.run_id }}"
           fi
+          
+          # Use deployment namespace with prefix
+          NAMESPACE="app-dev-pr-${PIPELINE_ID}"
 
           echo "Using PIPELINE_ID: $PIPELINE_ID"
+          echo "Deploying to namespace: $NAMESPACE"
           
-          helm template my-nginx . \
-            --namespace default \
+          # Create namespace if it doesn't exist
+          kubectl create namespace "$NAMESPACE" --dry-run=client -o yaml | kubectl apply -f -
+          
+          # Deploy using Helm
+          helm upgrade --install nginx-${PIPELINE_ID} . \
+            --namespace "$NAMESPACE" \
             --set h1Content="${{ github.event.inputs.h1Content }}" \
             --set pipelineID="$PIPELINE_ID" \
-            > helm-output.yaml
-
-      - name: Apply manifests to Kubernetes
+            --set namespace="$NAMESPACE" \
+            --timeout=5m \
+            --wait
+            
+      - name: Show deployment info
         run: |
-          kubectl apply -f helm-output.yaml
+          PIPELINE_ID="${{ github.event.inputs.pipelineID }}"
+          if [ -z "$PIPELINE_ID" ]; then
+            PIPELINE_ID="${{ github.run_id }}"
+          fi
+          
+          NAMESPACE="app-dev-pr-${PIPELINE_ID}"
+          
+          echo "🚀 Deployment completed!"
+          echo "📦 Namespace: $NAMESPACE"
+          echo "🌐 Application URL: https://${PIPELINE_ID}.dev.statslab.local"
+          echo ""
+          echo "📊 Pod status:"
+          kubectl get pods -n "$NAMESPACE" -l app.kubernetes.io/instance=nginx-${PIPELINE_ID}
+          echo ""
+          echo "🔗 Service status:"
+          kubectl get svc -n "$NAMESPACE" -l app.kubernetes.io/instance=nginx-${PIPELINE_ID}
+          echo ""
+          echo "🌍 Ingress status:"
+          kubectl get ingress -n "$NAMESPACE" -l app.kubernetes.io/instance=nginx-${PIPELINE_ID}
