--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -6,11 +6,97 @@ metadata:
 data:
   index.html: |
     <!DOCTYPE html>
-    <html>
+    <html lang="pl">
     <head>
-        <title>Hello World</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello World</title>
+    <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      }
+
+    body {
+      font-family: 'Arial', sans-serif;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      }
+
+    .container {
+      text-align: center;
+      background: rgba(255, 255, 255, 0.1);
+      padding: 60px 40px;
+      border-radius: 20px;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      animation: fadeInUp 1s ease-out;
+      }
+
+    h1 {
+      font-size: 3.5rem;
+      margin-bottom: 20px;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+      animation: glow 2s ease-in-out infinite alternate;
+      }
+
+    .emoji {
+      font-size: 4rem;
+      margin: 20px 0;
+      display: block;
+      animation: bounce 2s infinite;
+      }
+
+    p {
+      font-size: 1.3rem;
+      margin-top: 20px;
+      opacity: 0.9;
+      }
+
+    @keyframes fadeInUp {
+    from {
+      opacity: 0;
+      transform: translateY(30px);
+      }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+      }
+      }
+
+    @keyframes glow {
+      from {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3), 0 0 10px rgba(255, 255, 255, 0.3);
+    }
+      to {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3), 0 0 20px rgba(255, 255, 255, 0.6);
+    }
+    }
+
+    @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+    }
+      40% {
+    transform: translateY(-10px);
+    }
+      60% {
+    transform: translateY(-5px);
+    }
+    }
+    </style>
     </head>
     <body>
-    <h1>{{ .Values.h1Content }}</h1>
+    <div class="container">
+    <h1>Hello world!</h1>
+    <span class="emoji">
+    </span>
+    </div>
     </body>
     </html>
